<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="all_action_clear">Clear</string>
    <string name="all_action_ok">OK</string>
    <string name="all_holder_lorem_ipsum">Lorem Ipsum Holder</string>
    <string name="all_msg_email_address" translatable="false">parissa.kalaee@gmail.com</string>

    <string name="app_name">Parka Decision Maker</string>

    <string name="calculator_action_alternatives">Alternatives</string>
    <string name="calculator_action_calculate">Calculate</string>
    <string name="calculator_action_criteria">Criteria</string>
    <string name="calculator_action_prioritize_alternatives">Prioritize Alternatives</string>
    <string name="calculator_action_prioritize_criteria">Prioritize Criteria</string>
    <string name="calculator_action_subject">Decision Subject</string>

    <string name="compare_alternatives_holder_middle">money</string>
    <string name="compare_alternatives_msg_beginning">based on criteria</string>
    <string name="compare_alternatives_msg_rest">rate the alternatives</string>
    <string name="compare_criteria_holder_item1">first case</string>
    <string name="compare_criteria_holder_item2">second case</string>

    <string name="get_alternatives_hint_alternatives1">1st Alternative</string>
    <string name="get_alternatives_hint_alternatives2">2nd Alternative</string>
    <string name="get_alternatives_hint_alternatives3">3rd Alternative</string>
    <string name="get_alternatives_hint_alternatives4">4th Alternative</string>
    <string name="get_alternatives_hint_alternatives5">5th Alternative</string>

    <string name="get_criteria_hint_criterion1">1st Criterion</string>
    <string name="get_criteria_hint_criterion2">2nd Criterion</string>
    <string name="get_criteria_hint_criterion3">3rd Criterion</string>
    <string name="get_criteria_hint_criterion4">4th Criterion</string>
    <string name="get_criteria_hint_criterion5">5th Criterion</string>

    <string name="get_subject_hint_subject">Decision Subject</string>
    <string name="calculator_desc_dice" translatable="false">dice</string>
    <string name="get_subject_dialog_title">Please enter your decision subject, like trip, buying house, …</string>
    <string name="get_alternatives_fragment_title">Please enter alternatives, in trip case, e.g. France, Italy, …</string>
    <string name="get_criteria_fragment_title">Please enter criteria, in trip case, e.g. cost, distance, … </string>
    <string name="prioritize_alternatives_dialog_title">Please rate each alternative based on criteria.</string>
    <string name="prioritize_criteria_dialog_title">Please rate criteria to each other.</string>
    <string name="all_msg_complete_entries">Please complete the entries!</string>
    <string name="all_msg_excellent">excellent</string>
    <string name="all_msg_very_good">very good</string>
    <string name="all_msg_good">good</string>
    <string name="all_msg_so_so">so-so</string>
    <string name="all_msg_bad">bad</string>
    <string name="all_menu_about">about us</string>
    <string name="all_menu_rules">rules</string>
    <string name="all_menu_share">share</string>
    <string name="all_menu_settings">settings</string>
    <string name="language_fragment_english">English</string>
    <string name="language_fragment_farsi">فارسی</string>
</resources>
