<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MessageScrollBar">

    <LinearLayout style="@style/MessageLayout" >

        <TextView
            android:id="@+id/textViewDialogGetCriteria"
            style="@style/MessageTextView"
            android:text="@string/all_holder_lorem_ipsum" />

        <EditText
            android:id="@+id/edtParameter1"
            style="@style/EditTextCustomized"
            android:hint="@string/get_criteria_hint_criterion1" />

        <EditText
            android:id="@+id/edtParameter2"
            style="@style/EditTextCustomized"
            android:hint="@string/get_criteria_hint_criterion2" />

        <EditText
            android:id="@+id/edtParameter3"
            style="@style/EditTextCustomized"
            android:hint="@string/get_criteria_hint_criterion3" />

        <EditText
            android:id="@+id/edtParameter4"
            style="@style/EditTextCustomized"
            android:hint="@string/get_criteria_hint_criterion4" />

        <EditText
            android:id="@+id/edtParameter5"
            style="@style/EditTextCustomized"
            android:hint="@string/get_criteria_hint_criterion5" />

        <LinearLayout style="@style/ButtonLayout" >

            <Button
                android:id="@+id/btnCancelDialogGetCriteria"
                style="@style/YesNoButton"
                android:text="@string/all_action_clear" />

            <Button
                android:id="@+id/btnOKDialogGetCriteria"
                style="@style/YesNoButton"
                android:text="@string/all_action_ok" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>