<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    style="@style/MessageScrollBar" >

    <LinearLayout style="@style/MessageLayout" >

        <TextView
            android:id="@+id/txtMessage2"
            style="@style/MessageTextView"
            android:text="@string/all_holder_lorem_ipsum" />

        <EditText
            android:id="@+id/edtAlternative1"
            style="@style/EditTextCustomized"
            android:hint="@string/get_alternatives_hint_alternatives1" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/edtAlternative2"
            style="@style/EditTextCustomized"
            android:hint="@string/get_alternatives_hint_alternatives2" />

        <EditText
            android:id="@+id/edtAlternative3"
            style="@style/EditTextCustomized"
            android:hint="@string/get_alternatives_hint_alternatives3" />

        <EditText
            android:id="@+id/edtAlternative4"
            style="@style/EditTextCustomized"
            android:hint="@string/get_alternatives_hint_alternatives4"
            android:padding="6dp" />

        <EditText
            android:id="@+id/edtAlternative5"
            style="@style/EditTextCustomized"
            android:hint="@string/get_alternatives_hint_alternatives5" />

        <LinearLayout style="@style/ButtonLayout" >

            <Button
                android:id="@+id/btnCancel1"
                style="@style/YesNoButton"
                android:text="@string/all_action_clear" />

            <Button
                android:id="@+id/btnOK1"
                style="@style/YesNoButton"
                android:text="@string/all_action_ok" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>