<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:scrollbarStyle="insideOverlay"
        android:scrollbarSize="4dp"
        android:scrollbarThumbVertical="@drawable/shape_bg_scrollbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurface" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="?attr/colorSurface" >
            <TextView
                android:id="@+id/textViewDialogPrioritizeAlternatives"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textSize="16sp"
                android:textColor="?attr/colorOnSurface"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/prioritize_alternatives_dialog_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <com.parissakalaee.parkadecisionmaker.ui.customView.ViewAlternativeComp
                    android:id="@+id/viewAlternativeComp1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center" >
                </com.parissakalaee.parkadecisionmaker.ui.customView.ViewAlternativeComp>

                <com.parissakalaee.parkadecisionmaker.ui.customView.ViewAlternativeComp
                    android:id="@+id/viewAlternativeComp2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center" >
                </com.parissakalaee.parkadecisionmaker.ui.customView.ViewAlternativeComp>

                <com.parissakalaee.parkadecisionmaker.ui.customView.ViewAlternativeComp
                    android:id="@+id/viewAlternativeComp3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center" >
                </com.parissakalaee.parkadecisionmaker.ui.customView.ViewAlternativeComp>

                <com.parissakalaee.parkadecisionmaker.ui.customView.ViewAlternativeComp
                    android:id="@+id/viewAlternativeComp4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center" >
                </com.parissakalaee.parkadecisionmaker.ui.customView.ViewAlternativeComp>

                <com.parissakalaee.parkadecisionmaker.ui.customView.ViewAlternativeComp
                    android:id="@+id/viewAlternativeComp5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center" >
                </com.parissakalaee.parkadecisionmaker.ui.customView.ViewAlternativeComp>
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="16dp">

                <Button
                    android:id="@+id/btnOkDialogPrioritizeAlternatives"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:padding="12dp"
                    android:textSize="16sp"
                    android:textColor="?attr/colorOnPrimary"
                    android:background="@drawable/selector_btn_mantis"
                    android:fontFamily="@font/opensans_semibold"
                    android:layout_marginEnd="272dp"
                    android:text="@string/all_action_ok"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btnCancelDialogPrioritizeAlternatives"
                    app:layout_constraintTop_toTopOf="@id/btnCancelDialogPrioritizeAlternatives" />

                <Button
                    android:id="@+id/btnCancelDialogPrioritizeAlternatives"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:padding="12dp"
                    android:textSize="16sp"
                    android:textColor="?attr/colorOnPrimary"
                    android:background="@drawable/selector_btn_mantis"
                    android:fontFamily="@font/opensans_semibold"
                    android:text="@string/all_action_clear"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>
</layout>